--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,14 @@
 
 /* CSS for lightbox gallery */
 
+#gallery img {
+	 height: 25vw;
+	 object-fit: cover;
+}
+ .carousel-item img {
+	 height: 40vw;
+	 object-fit: cover;
+}
  
 /* Map Section */
   
